# desec-mcp-server

./: README.md  pyproject.toml
src/desec_mcp_server/: server.py
