[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desec-mcp-server"
version = "0.1.0"
description = "MCP server for managing deSEC.io DNS zones"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
desec-mcp-server = "desec_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/desec_mcp_server"]
